[gd_scene load_steps=14 format=3 uid="uid://dxi4j7o38c15x"]

[ext_resource type="Script" uid="uid://qs313f3vhbvb" path="res://Assets/Scenes/Game/WorldMap/Level.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bme8fstyjadjm" path="res://Assets/Image/WorldMap/WorldMaker.png" id="2_fyndm"]
[ext_resource type="Texture2D" uid="uid://b177srf5us3w3" path="res://Assets/Image/UI/WorldMapDialogBox.png" id="3"]
[ext_resource type="FontFile" uid="uid://cqrn2gol1flwm" path="res://Fonts/方正综艺简体(1).ttf" id="4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fb8gv"]
atlas = ExtResource("2_fyndm")
region = Rect2(1023, 3188, 14, 14)

[sub_resource type="CircleShape2D" id="1"]
radius = 16.0

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("3")
region = Rect2(0, 0, 128, 100)

[sub_resource type="SpriteFrames" id="3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Theme" id="4"]
default_font = ExtResource("4")

[sub_resource type="Animation" id="5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -5)]
}

[sub_resource type="Animation" id="6"]
resource_name = "enter"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, -2, 0.5),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.1, 0.5), Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(0, -5), Vector2(0, -30)]
}

[sub_resource type="Animation" id="7"]
resource_name = "exit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, -2, 0.5),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.1, 0.5), Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(0, -30), Vector2(0, -5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gsrx2"]
_data = {
&"RESET": SubResource("5"),
&"enter": SubResource("6"),
&"exit": SubResource("7")
}

[node name="Level" type="Area2D"]
texture_filter = 1
collision_layer = 0
collision_mask = 2
script = ExtResource("2")
level = "res://Assets/Scenes/Game/1-1Remix/1-1.tscn"
text = "过往-砖瓦平原"

[node name="Level" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_fb8gv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="DialogBox" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.74902)
position = Vector2(0, -5)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("3")

[node name="Label" type="Label" parent="DialogBox"]
modulate = Color(0, 0, 0, 1)
theme = SubResource("4")
text = "测试"

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogBox"]
libraries = {
&"": SubResource("AnimationLibrary_gsrx2")
}

[connection signal="body_entered" from="." to="." method="_on_Level_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Level_body_exited"]
